# mockfactory-cli

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISH_TO_PYPI.md  README.md  RELEASE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
examples/: README.md  fibonacci.py  hello.js  hello.py
mockfactory_cli/: __init__.py  cli.py  client.py  config.py
